Description
Extracting files from cabinet file using SetupQueueCopy and SetupCommitFileQueue doesn't completely work in ReactOS, using the test_setupapi_cab.c file sample attached.
 file sample attached.
It however works OK on Windows 2000, 2003, 7 and Windows 10 (in both x86 and x64).
In particular:
- contrary to what Wine thought, this works even if the cabinet file does not have a ".cab" extension;
- instead of polluting the directory where the cabinet file exists with all the files extracted from it, we only extract the needed file to a temporary folder (thus being sure it does not overwrite any other existing file with the same name), and then we move the extracted file to its final destination with rename.
Attachments
Issue Links
- blocks
- 
                    CORE-19209 SetupAPI partial sync to Wine 8.15 -         
- In Progress
 
-